feat: update website with live Chrome Web Store link

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <h1 class="hero-title">Reclaim your focus and conquer your day</h1>
                     <p class="hero-subtitle">Transform your new tab into a productivity powerhouse with Pomodoro timers, task management, website blocking, and seamless Google Calendar integration.</p>
                     <div class="hero-buttons">
-                        <a href="#install" class="btn btn-primary">Add to Chrome</a>
+                        <a href="https://chromewebstore.google.com/detail/locked-in-productivity-da/bojgnnnbpkpbndfnabaolonacgnjidkm" target="_blank" class="btn btn-primary">Add to Chrome</a>
                         <a href="#features" class="btn btn-secondary">Learn More</a>
                     </div>
                 </div>
@@ -133,8 +133,8 @@
                             <p>Open a new tab and start being productive</p>
                         </div>
                     </div>
-                    <a href="#" class="btn btn-primary btn-large">Add to Chrome - It's Free</a>
-                    <p class="install-note">Coming soon to the Chrome Web Store</p>
+                    <a href="https://chromewebstore.google.com/detail/locked-in-productivity-da/bojgnnnbpkpbndfnabaolonacgnjidkm" target="_blank" class="btn btn-primary btn-large">Add to Chrome - It's Free</a>
+                    <p class="install-note">Available now on the Chrome Web Store</p>
                 </div>
             </div>
         </section>
